--- a/algheroXdesign/public/invisible-matters/index.html
+++ b/algheroXdesign/public/invisible-matters/index.html
@@ -477,15 +477,15 @@
                     autoplay></dotlottie-player>
             </h1>
             <p>
-                La call è rivolta a chi è regolarmente iscritto o iscritta al Corso di Laurea in Design del
+
+                La call è rivolta a <strong>21 studentesse e studenti in corso (1, 2 e 3 anno) nell'aa. 25/26 </strong>
+                regolarmente
+                iscritti al Corso di Laurea in Design del
                 Dipartimento
-                di Design, Architettura e Urbanistica dell’Università degli Studi di Sassari, <strong>a partire
-                    dall’A.A.
-                    2023/24.</strong>
-            </p>
-            <p>
-                <strong>Partecipazione gratuita – posti limitati (max 21 - 7 per ogni anno).</strong> 
-                Per partecipare, invia la tua candidatura entro il 20 settembre 2025 compilando il form
+                di Design, Architettura e Urbanistica dell’Università degli Studi di Sassari.
+                La partecipazione è gratuita e i posti sono limitati (massimo 21, con 7 per ciascun anno di corso). Per
+                candidarsi è necessario compilare il form entro il 20 settembre 2025.
+
             </p>
             <p><a class="button" href="https://forms.gle/inZmkaBKDHirnMUm7">Iscriviti qui!</a>
             </p>
@@ -498,7 +498,7 @@
             </h1>
 
             <ul>
-                <li><strong>Nada Beretic</strong> – Place making & playful interaction</li>
+                <li><strong>Nada Beretic</strong> – Placemaking & playful interaction</li>
                 <li><strong>Matteo Moretti </strong>– Participatory Data physicalization</li>
                 <li><strong>Silvia Pulina </strong>– Contenuti scientifici</li>
                 <li><strong>Paola Dore </strong>– Exhibit design</li>
